WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
158848
REGRESSION(
r196217
): 3% JSBench regression on iPhone 5.
https://bugs.webkit.org/show_bug.cgi?id=158848
Summary
REGRESSION(r196217): 3% JSBench regression on iPhone 5.
Andreas Kling
Reported
2016-06-16 14:12:31 PDT
Let's roll her out first and then do something better in
bug 158847
.
Attachments
Rollout for landing
(1.58 KB, patch)
2016-06-16 14:14 PDT
,
Andreas Kling
kling
: commit-queue+
Details
Formatted Diff
Diff
Rollout for landing
(1.61 KB, patch)
2016-06-16 14:15 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
Rollout for landing
(1.61 KB, patch)
2016-06-16 14:16 PDT
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2016-06-16 14:14:30 PDT
Created
attachment 281470
[details]
Rollout for landing
Andreas Kling
Comment 2
2016-06-16 14:15:29 PDT
Created
attachment 281471
[details]
Rollout for landing
Andreas Kling
Comment 3
2016-06-16 14:16:45 PDT
Created
attachment 281473
[details]
Rollout for landing
WebKit Commit Bot
Comment 4
2016-06-16 14:47:06 PDT
Comment on
attachment 281473
[details]
Rollout for landing Clearing flags on attachment: 281473 Committed
r202139
: <
http://trac.webkit.org/changeset/202139
>
WebKit Commit Bot
Comment 5
2016-06-16 14:47:10 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug