REGRESSION(r196217): 3% JSBench regression on iPhone 5. <https://webkit.org/b/158848> <rdar://problem/26609622>

Unreviewed rollout.

Don't jettison linked code on every top-level navigation as that was hurting JSBench on iPhone 5.


* loader/FrameLoader.cpp:
(WebCore::FrameLoader::commitProvisionalLoad):


Canonical link: https://commits.webkit.org/176917@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202139 268f45cc-cd09-0410-ab3c-d52691b4dbfc